# Supply-Chain

./: pyproject.toml  summary.md
week_1/: Homework1_TSA130.csv  Supply Chain Analytics, Assignment 1.ipynb  batteries.xlsx  bottled-water.xlsx  dog-food.xlsx  homework1.ipynb  novel.xlsx  nyc-fires.csv  oxygen.xlsx  potting-soil.xlsx  seminar1.ipynb
week_2/: Homework_2 (Wagner-Within-instance).xlsx  homework2.ipynb
week_3/: homework3.ipynb
week_4/: Version 2 - Assignment 4 - Supply Chain Analytics .ipynb  homework4.ipynb
